<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/mybackground"
    tools:context="com.exmplem.android.quizeme2.HomeActivity">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/chose_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="70dp"
                android:fontFamily="casual"
                android:text="@string/chose_topic"
                android:textAllCaps="true"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="16dp"
                android:textStyle="bold" />

            <Button
                android:layout_below="@id/chose_header"
                android:id="@+id/history_btn"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="#26A69A"
                android:fontFamily="casual"
                android:text="@string/history"
                android:onClick="goQuestHist"
                android:textStyle="bold" />

            <Button
                android:layout_below="@id/chose_header"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_centerHorizontal="true"
                android:background="#26A69A"
                android:fontFamily="casual"
                android:onClick="goQuestEcono"
                android:text="@string/economy"
                android:textStyle="bold" />

            <Button
                android:layout_below="@id/chose_header"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:background="#26A69A"
                android:fontFamily="casual"
                android:onClick="goQuestSci"
                android:text="@string/science"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="190dp"
                android:layout_marginTop="250dp"
                android:alpha="0.6"
                android:layout_centerHorizontal="true"
                android:src="@drawable/qmark" />

        </RelativeLayout>

</LinearLayout>


